--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Mia Johansson - Student &amp; Developer</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="scss/application.css">
   </head>
   <body>
