Big changes to home page

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
       </nav>
     </header>
 
-<h1 id="page_title">Contact Me :)</h1>
+<h1 id="page_title">Contact Us</h1>
 
 <div class="skinny_wrapper wrapper_padding">
   <label>Name</label><br />
