updated personal email

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <p>Since then, I have built <a href="#">this blog</a> to learn Ruby on Rails,
           but I plan to use it to document my journey of programming and creating future projects.</p>
         <p>You can contact me on Twitter at <a href="https://twitter.com/johanssonmia09"><i>@johanssonmia9</i></a> or Instagram at <a href="https://www.instagram.com/miajohansson9/"><i>@miajohansson9</i></a>.
-          Or feel free to email me at <a href="mailto:theteenmagazineeditors@gmail.com" target="_top">@theteenmagazineeditors@gmail.com</a></p>
+          Or feel free to email me at <a href="mailto:mia@theteenmagazine.com" target="_top">@mia@theteenmagazine.com</a></p>
       </div>
       <div class="col-2 homepage_content">
         <h2>My Blog Posts</h2>
