fixed profile image

--- a/public/pinterest-b07db.html
+++ b/public/pinterest-b07db.html
@@ -62,7 +62,7 @@
 
 
 
-    <td class="profile_image" width="80" valign="top">
+    <td class="profile_image.jpg" width="80" valign="top">
         <a href="https://www.pinterest.com/website/confirm/" title="The Teen Magazine">
             <img src="https://i.pinimg.com/140x140_RS/10/15/27/101527e14657137ac3c097ded59cd4fe.jpg" width="80" height="80" style="vertical-align:top;outline:none;border:none;" alt="The Teen Magazine" />
         </a>
