updated spam filter

--- a/public/no_profanity.html
+++ b/public/no_profanity.html
@@ -59,7 +59,7 @@
     <!-- This file lives in public/404.html -->
     <div class="dialog">
         <div>
-            <h1>You cannot use profanity on The Teen Magazine</h1>
+            <h1>Your comment was blocked</h1>
             <p>
                 Your comment was blocked because it contained one or more words on our blacklist. Please be respectful to our writers and follow our community rules.
             </p>
